2007-14-08  Russell Bateman <russell.bateman@quest.com>
			* Commit first round of files.
2007-03-08  Russell Bateman <russell.bateman@quest.com>
			* Created project configure.ac, Makefile.am, etc.