@@ -1,4 +1,3 @@
-
 php-vas: Vintela Authentication Services API for PHP
 
 Summary
@@ -78,7 +77,7 @@ Debugging notes
 ---------------
 
 * Segmentation faults are usually caused by symbol collisions with other
-    modules.
+     modules.
 
 * Add this line to the PHP script so that errors are logged:
      error_reporting(E_ERROR | E_WARNING | E_PARSE | E_NOTICE);
@@ -87,6 +86,11 @@ Debugging notes
         cd extension ; ctags -R <path-to-PHP-headers>
      For example:
         cd extension ; ctags -R /usr/local/include/php
+
+* To test the suite run through by make check, correct (to your environment)
+     the variables test/test.php: $username, $password, $adminusername,
+     $adminpassword, $searchbase, $groupname, $principal, $userupn and
+     $computername (at least).
 
 Known issues
 ------------
