@@ -1251,7 +1251,7 @@ ZEND_VAS_NAMED_FUNC( vas_ctx_get_option )
 # if HAVE_VAS_CTX_OPTION_SRVINFO_DETECT_ONLY_UNTIL_FOUND /* 3.0.3.38 */
         case VAS_CTX_OPTION_SRVINFO_DETECT_ONLY_UNTIL_FOUND:
 # endif
-# if HAVE_VAS_CTX_OPTION_DNS_FAILURE_TIMELIMIT		 /* 3.1.1.39 */
+# if HAVE_VAS_CTX_OPTION_DNS_FAILURE_TIMELIMIT           /* 3.1.1.39 */
         case VAS_CTX_OPTION_DNS_FAILURE_TIMELIMIT:
 # endif
 #endif
@@ -5941,10 +5941,16 @@ PHP_RINIT_FUNCTION( vas )
     REGISTER_LONG_VAS_CONSTANT(GSS_C_CALLING_ERROR_OFFSET);
     REGISTER_LONG_VAS_CONSTANT(GSS_C_ROUTINE_ERROR_OFFSET);
     REGISTER_LONG_VAS_CONSTANT(GSS_C_SUPPLEMENTARY_OFFSET);
-    REGISTER_LONG_VAS_CONSTANT(GSS_C_NO_CONTEXT);	/* XXX not a long */
-    REGISTER_LONG_VAS_CONSTANT(GSS_C_NO_CREDENTIAL);	/* XXX not a long */
-    REGISTER_STRING_CONSTANT(  "GSS_C_NO_BUFFER",
-                            "",                   CONST_CS | CONST_PERSISTENT );
+
+    /* Because the following aren't longs, they must be coerced to stop
+     * the compiler from moaning...
+     */
+#define REGISTER_GSS_LONG_VAS_CONSTANT(c) \
+    REGISTER_LONG_CONSTANT(#c, ( long ) (c), CONST_CS | CONST_PERSISTENT )
+    REGISTER_GSS_LONG_VAS_CONSTANT(GSS_C_NO_CONTEXT);
+    REGISTER_GSS_LONG_VAS_CONSTANT(GSS_C_NO_CREDENTIAL);
+
+    REGISTER_STRING_CONSTANT( "GSS_C_NO_BUFFER", "", CONST_CS | CONST_PERSISTENT );
     REGISTER_LONG_VAS_CONSTANT(GSS_S_CALL_INACCESSIBLE_READ);
     REGISTER_LONG_VAS_CONSTANT(GSS_S_CALL_INACCESSIBLE_WRITE);
     REGISTER_LONG_VAS_CONSTANT(GSS_S_CALL_BAD_STRUCTURE);
@@ -5978,11 +5984,10 @@ PHP_RINIT_FUNCTION( vas )
     REGISTER_LONG_VAS_CONSTANT(LDAP_MOD_REPLACE);
     REGISTER_LONG_VAS_CONSTANT(LDAP_MOD_BVALUES);
 /* end cinit subsection */
-
 /* vinit subsection */
 /* end vinit subsection */
 
-   /*SPE*/
+   /* SPE */
     memset( &( VAS_G( g_vas_err ) ),       sizeof( VAS_G( g_vas_err ) ), 0 );
     memset( &( VAS_G( g_vas_err_minor ) ), sizeof( VAS_G( g_vas_err_minor ) ), 0 );
 
